# pyroclast

./: AGENTS.md  Cargo.toml  README.md  flake.nix
.githooks/: pre-commit
src/: artifacts.rs  backends.rs  benchmarks.rs  cli.rs  config.rs  errors.rs  flamegraph.rs  folded.rs  lib.rs  main.rs  manifest.rs  output.rs  parsers.rs  perfdata.rs  platform.rs  process.rs  summary.rs  symbols.rs  tools.rs
src/backends/: fake.rs  heaptrack.rs  linux_perf.rs  macos_xctrace.rs  offcpu.rs  strace.rs
src/flamegraph/: analysis.rs
src/parsers/: bpftrace.rs  heaptrack.rs  strace.rs  xctrace.rs
src/perfdata/: analysis.rs  attrs.rs  build_id.rs  endian.rs  fold.rs  header.rs  mappings.rs  raw_stack.rs  records.rs  samples.rs  unwind.rs
src/summary/: heap.rs  syscalls.rs  threads.rs  timeline.rs
tests/: artifacts_manifest.rs  backend_commands.rs  benchmarks.rs  bpftrace_parser.rs  cli.rs  cli_output.rs  dev_tooling.rs  fake_backend.rs  flamegraph.rs  flamegraph_analysis.rs  folded.rs  heaptrack_backend.rs  heaptrack_parser.rs  linux_perf_backend.rs  macos_xctrace_backend.rs  offcpu_backend.rs  perfdata_analysis.rs  perfdata_attrs.rs  perfdata_build_id.rs  perfdata_fold.rs  perfdata_header.rs  perfdata_mappings.rs  perfdata_records.rs  perfdata_samples.rs  perfdata_unwind.rs  platform.rs  process_runner.rs  readme.rs  run_cli.rs  strace_backend.rs  strace_parser.rs  summary_threads.rs  symbols.rs  tools.rs  xctrace_parser.rs
tests/common/: mod.rs
