[package]
name = "pyroclast"
version = "0.1.0"
edition = "2024"
default-run = "pyroclast"

[dependencies]
clap = { version = "4", features = ["derive"] }
hashbrown = "0.17.1"
memmap2 = "0.9"
rustc-hash = "2.1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
