[package]
name = "pyroclast"
version = "0.1.0"
edition = "2024"
default-run = "pyroclast"

[dependencies]
addr2line = "0.26.1"
clap = { version = "4", features = ["derive"] }
framehop = "0.16.0"
framehop-object = "0.2.0"
gimli = "0.32.3"
hashbrown = "0.17.1"
memmap2 = "0.9"
object = "0.39.1"
rustc-hash = "2.1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.18.0", default-features = false }

[dev-dependencies]
object = "0.39.1"
proptest = "1.11.0"
tempfile = "3"

[profile.release]
debug = false
strip = true
lto = "thin"
codegen-units = 1
overflow-checks = true

[profile.profiling]
inherits = "release"
debug = 2
strip = false
